Fix modal root overflow from page.

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -20,9 +20,10 @@ body {
 }
 
 .app {
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 a {
